# bandits_simulations

./: .gitignore  .pre-commit-config.yaml  README.md  baysian_bandits.py  baysian_bandits_animation.py  beta_dist_plots.py  build.sh  chi2_bandits.py  makefile  pyproject.toml  requirements.txt
src/: baysian_bandits_animation.py  beta_dist_plots.py  chi2_bandits.py
