[tool.poetry]
name = "bandits-simulations"
version = "0.1.0"
description = ""
authors = ["Alexander Lewzey <a.lewzey@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
contourpy = "^1.2.1"
cycler = "^0.12.1"
fonttools = "^4.53.1"
importlib-resources = "^6.4.0"
kiwisolver = "^1.4.5"
matplotlib = "^3.9.1.post1"
numpy = "^2.0.1"
packaging = "^24.1"
pandas = "^2.2.2"
pillow = "^10.4.0"
plotly = "^5.23.0"
pyparsing = "^3.1.2"
python-dateutil = "^2.9.0.post0"
pytz = "^2024.1"
scipy = "^1.14.0"
six = "^1.16.0"
tenacity = "^9.0.0"
zipp = "^3.19.2"


[tool.poetry.group.test.dependencies]
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "A", # Pyflakes: general checks
    "B", # pycodestyle: pycodestyle checks
    "C", # mccabe: complexity checks
    # "D",  # pydocstyle: docstring style checks
    "E",  # pycodestyle: pycodestyle errors
    "F",  # pyflakes: unused imports, variables, etc.
    "I",  # isort: import sorting
    "N",  # pep8-naming: naming conventions
    "S",  # bandit: security checks
    "W",  # pycodestyle: pycodestyle warnings
    "UP", # pyupgrade: upgrade python version syntax
]
ignore = [
    "S101", # Ignore use of assert detected
    "S108", # ignore use of tmp
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]
fix = true
